--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 # .npmrc
+enable-pre-post-install-scripts=true
 public-hoist-pattern=*
-shamefully-hoist=true # This is needed for some older packages or complex setups
+shamefully-hoist=true
