--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.60.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.0"
   },
   "devDependencies": {
