--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/adapter-neon": "^6.11.1",
     "@prisma/client": "^6.11.1",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
