feat: add environment variables for GitHub, Google, and Resend API integration to support authentication features

--- a/example.env
+++ b/example.env
@@ -5,3 +5,13 @@ DATABASE_URL=""
 BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL=""
 
+# GitHub
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
+# Google
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# Resend
+RESEND_API_KEY=""
